--- a/blog/C4.2_HernandezQuezada_JMM.md
+++ b/blog/C4.2_HernandezQuezada_JMM.md
@@ -115,13 +115,13 @@ void handle_root() {
 
 **Esto se muestra en el serial junto con la ip la cual debemos acceder**
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_practica.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_practica.png" width= height=>
 </p>
 
 **Esto es lo que muestra dentro del servidor web**
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_prueba.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_prueba.png" width= height=>
 </p>
 
 
@@ -130,19 +130,19 @@ void handle_root() {
 4. Al programa anterior agregue las instrucciones necesarias para que se despliegue en la interface un botón que permita encender y apagar un Led tal como se muestra en la figura 1.
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_Codigo.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_Codigo.png" width= height=>
 </p>
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_Codigo1.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_Codigo1.png" width= height=>
 </p>
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_Codigo2.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_Codigo2.png" width= height=>
 </p>
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_Codigo3.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_Codigo3.png" width= height=>
 </p>
 
 5. Inserte aquí las imágenes que considere como evidencias para demostrar el resultado obtenido.
@@ -151,13 +151,13 @@ Video de evidencia [C4.2 Prueba](https://youtu.be/XWrF3YtfTyw)
 
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_serial.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_serial.png" width= height=>
 </p>
 
 **Servidor estado apagado**
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_web.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_web.png" width= height=>
 </p>
 
 <p align="center">
@@ -167,7 +167,7 @@ Video de evidencia [C4.2 Prueba](https://youtu.be/XWrF3YtfTyw)
 **Servidor estado prendido**
 
 <p align="center">
-    <img alt="Bluetooth" src="../img/C4.2_webon.PNG" width= height=>
+    <img alt="Bluetooth" src="../img/C4.2_webon.png" width= height=>
 </p>
 
 <p align="center">
