Update and rename A4.2_HernandezQuezadaMartin_JMM.md to A4.2_HernandezQuezada_JMM.md

--- a/docs/A4.2_HernandezQuezada_JMM.md
+++ b/docs/A4.2_HernandezQuezada_JMM.md
@@ -214,7 +214,8 @@ void loop() {
 
 - **Hernández Quezada Martín**
 
-En esta actividad conocimos un poco mas sobre las funcionalidades del ESP32, como lo es en esta ocasión el Bluetooth donde enviábamos el código de Arduino por el Bluetooth del ESP32 para que este en el circuito encendiera el motor y girara dependiendo de las condiciones que se pidieron, el motor encendía y apagaba dependiendo de lo que se le indicara por medio del Bluetooth, se tuvo un poco de complejidad al momento de hacer que funcionara ya que nuestro código no funcionaba hasta que se le agregaron los métodos necesarios que hicieron que este funcionara. 
+Esta actividad nos pedía encender/apagar un LED dependiendo de la condición de luz en el ambiente, esto se mostraría en una Interfaz web la cual mostraría ENCENDIDO/APAGADO, esto gracias al ESP32 y su tecnología WiFi.
+Hasta ahora esta es la practica que mas se nos ha dificultado al ser algo mas complejo y donde se pide la utilización de mas materiales, además de incorporar HTML y CSS, lo cual es bastante interesante que pueden ser utilizados de una forma mas fácil mediante el Arduino IDE y las librerías externas que nos podrían ser bastante útiles a futuro. 
 
 - **Navarro Rosas Martín Ivan**
 
@@ -222,8 +223,7 @@ Esta practica fue la mas difícil que hemos realizado desde el inicio del curso 
 
 - **Sandoval Gorgonio Juan Pablo** 
 
-En esta practica aprendimos como realizar una conexión entre el esp32 y un motor DC mediante bluetooth desde la aplicación para celular, se nos dificultó en la parte del código ya que no funciono realizándolo sin métodos. 
-Me pareció interesante esta práctica ya que te da la idea de como realizar un carrito o al menos como los realizan, aunque se pueden realizar diferentes practicas no solo eso.
+En esta actividad teníamos que encender y apagar un led dependiendo de la cantidad de luz que exista alrededor del sensor de luz. Me parece interesante ya que este tipo de practicas nos demuestra como funcionan algunos circuitos que se integran ya sea en casas o lugares públicos, además de aprender como enlazar dicha practica a una pagina web.
 ___
 
 ### :bomb: Rubrica
